# docs

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  sitemap.xml
.github/workflows/: deploy.yml
adcs-firmware/Diagrammes/: 01_architecture.puml  02_sensor_classes.puml  03_gnss_dataflow.puml  06_status_display.puml  07_sensor_update_sequence.puml  (+3 more)
calibration/: index.html
cao-protosat/: index.html
cariboulite/: index.html
fire-risk-model/: index.html
protosat-cansbx/: Cargo.toml  ansible.cfg  index.html
protosat-cansbx/ffed_rs/: Cargo.toml  build.rs  config.mock.toml  config.toml  deploy.env
protosat-cansbx/ffed_rs/src/: lib.rs  main.rs  service.rs
protosat-cansbx/ffed_rs/src/image_pipeline/: debayer.rs
protosat-cansbx/ffed_rs/src/image_pipeline/debayer/: cpu_debayer.rs
protosat-cansbx/ffed_rs/src/image_pipeline/raw/: rawloader_reader.rs
protosat-cansbx/ffed_rs/src/service/: capture.rs  config.rs  indices.rs  queue.rs  scheduler.rs
protosat-cansbx/ffed_rs/src/service/capture/: gphoto2_capture.rs  mock_capture.rs  traits.rs
protosat-cansbx/ffed_rs/src/service/indices/: stub_calculator.rs  traits.rs
protosat-cansbx/ffed_rs/src/service/queue/: mock_queue.rs  rabbitmq.rs  traits.rs
protosat-cansbx/fire_risk_model/: deploy.env  infer.py  pyproject.toml
rf-radiation/: analyze_imu.py  config.py  custom_antennas.json  debug_accel.py  index.html  main.py  requirements.txt  run_server.py  start.sh  test_footprint_rfx.py  test_jitter.py  test_tm2.py  tm_test.xlsx
search/: search_index.json
wdm-firmware/: index.html  platformio.ini
(+233 files in other folders)
