[package]
name = "ffed_rs"
version = "0.1.1"
edition = "2024"

[dependencies]
rawloader = "0.37.1"
tiff = "0.10"
thiserror = "2.0"
cudarc = { version = "0.18.0", features = ["cuda-12020"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0.100"
bayer = { version = "0.1", features = ["rayon"] }
lapin = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "signal"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
chrono = "0.4"
futures-lite = "2"

[dev-dependencies]
tempfile = "3.0"

[build-dependencies]
bindgen = "0.70"
