[project]
name = "fire-risk-model"
version = "0.1.0"
description = "Fire risk detection CNN for multispectral imagery (Jetson Orin deployment)"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0,<2.0",
    "matplotlib>=3.7.0",
    "scipy>=1.10.0",
    "pika>=1.3.0",
    "rasterio>=1.3.0,<1.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
